# LearnD3D12

./: .gitignore  CMakeLists.txt  main.cpp
Texture/: CMakeLists.txt  main.cpp
Triangle/: CMakeLists.txt  main.cpp
cmake/: D3D12Target.cmake  Dependencies.cmake  ShaderCompiler.cmake
include/: CMakeLists.txt  GlfwWindow.hpp  Utility.hpp
shader/: CMakeLists.txt
